--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,38 @@
-ftfy
-regex
-requests
-Pillow
-torch
-torchvision
-tqdm
+anyio==3.6.1
+asgiref==3.4.1
+certifi==2022.6.15
+charset-normalizer==2.0.12
+click==8.0.4
+contextlib2==21.6.0
+contextvars==2.4
+dataclasses==0.8
+fastapi==0.79.0
+ftfy==6.0.3
+h11==0.13.0
+httptools==0.3.0
+idna==3.3
+imageio==2.15.0
+immutables==0.18
+importlib-metadata==4.8.3
+importlib-resources==5.4.0
+numpy==1.19.5
+Pillow==8.4.0
+pkg_resources==0.0.0
+pydantic==1.9.1
+python-dotenv==0.20.0
+PyYAML==6.0
+regex==2022.7.9
+requests==2.27.1
+sniffio==1.2.0
+starlette==0.19.1
+torch==1.10.1
+torchvision==0.11.2
+tqdm==4.64.0
+typing_extensions==4.1.1
+urllib3==1.26.10
+uvicorn==0.16.0
+uvloop==0.14.0
+watchgod==0.7
+wcwidth==0.2.5
+websockets==9.1
+zipp==3.6.0
